Add ordering to fields on layouts, standardize a few things, change way config is loaded in deployed environment to better align with linux norms, and fully replace sonarcloud with codeql
