# Services/Bones.Api/Controllers/GenericItemController.cs
@@ -14,13 +14,12 @@ public sealed class GenericItemController(ISender sender) : BonesControllerBase(
     /// <summary>
     ///     Gets the latest version of a field
     /// </summary>
-    /// <param name="projectId">The ID of the project</param>
     /// <param name="fieldId">The ID of the field</param>
     /// <returns>The latest version of the requested field.</returns>
-    [HttpGet("{projectId:guid}/fields/{fieldId:guid}/latest", Name = "GetLatestItemFieldVersionAsync")]
+    [HttpGet("fields/{fieldId:guid}/latest", Name = "GetLatestItemFieldVersionAsync")]
     [ProducesResponseType<GetLatestItemFieldVersionResponse>(StatusCodes.Status200OK)]
     [ProducesResponseType<ErrorResponse>(StatusCodes.Status400BadRequest)]
-    public async ValueTask<ActionResult<GetLatestItemFieldVersionResponse>> GetLatestItemFieldVersionAsync(Guid projectId, Guid fieldId)
+    public async ValueTask<ActionResult<GetLatestItemFieldVersionResponse>> GetLatestItemFieldVersionAsync(Guid fieldId)
     {
         QueryResponse<GenericItemField?> fieldResponse = await Sender.Send(new GetItemFieldById.Query(fieldId, await GetCurrentBonesUserAsync()));
 
@@ -56,13 +55,12 @@ public sealed class GenericItemController(ISender sender) : BonesControllerBase(
     /// <summary>
     ///     Gets the latest version of a layout
     /// </summary>
-    /// <param name="projectId">The ID of the project</param>
     /// <param name="layoutId">The ID of the layout</param>
     /// <returns>The latest version of the requested layout.</returns>
-    [HttpGet("{projectId:guid}/layouts/{layoutId:guid}/latest", Name = "GetLatestItemLayoutVersionAsync")]
+    [HttpGet("layouts/{layoutId:guid}/latest", Name = "GetLatestItemLayoutVersionAsync")]
     [ProducesResponseType<GetLatestItemLayoutVersionResponse>(StatusCodes.Status200OK)]
     [ProducesResponseType<ErrorResponse>(StatusCodes.Status400BadRequest)]
-    public async ValueTask<ActionResult<GetLatestItemLayoutVersionResponse>> GetLatestItemLayoutVersionAsync(Guid projectId, Guid layoutId)
+    public async ValueTask<ActionResult<GetLatestItemLayoutVersionResponse>> GetLatestItemLayoutVersionAsync(Guid layoutId)
     {
         QueryResponse<GenericItemLayout?> layoutResponse = await Sender.Send(new GetItemLayoutById.Query(layoutId, await GetCurrentBonesUserAsync()));
 
@@ -72,5 +70,25 @@ public sealed class GenericItemController(ISender sender) : BonesControllerBase(
         }
 
         return GetLatestItemLayoutVersionResponse.FromInternal(layoutResponse.Result);
+    }
+
+    /// <summary>
+    ///     Gets the latest version of a layout
+    /// </summary>
+    /// <param name="layoutId">The ID of the layout</param>
+    /// <returns>The latest version of the requested layout.</returns>
+    [HttpGet("layouts/{layoutId:guid}/latest/fields", Name = "GetLatestItemLayoutVersionFieldsAsync")]
+    [ProducesResponseType<List<GetLatestItemLayoutVersionFieldsResponse>>(StatusCodes.Status200OK)]
+    [ProducesResponseType<ErrorResponse>(StatusCodes.Status400BadRequest)]
+    public async ValueTask<ActionResult<List<GetLatestItemLayoutVersionFieldsResponse>>> GetLatestItemLayoutVersionFieldsAsync(Guid layoutId)
+    {
+        QueryResponse<GenericItemLayout?> layoutResponse = await Sender.Send(new GetItemLayoutById.Query(layoutId, await GetCurrentBonesUserAsync()));
+
+        if (!layoutResponse.Success || layoutResponse.Result is null)
+        {
+            return BadRequest(ErrorResponse.FromQueryResponse(layoutResponse));
+        }
+
+        return GetLatestItemLayoutVersionFieldsResponse.FromInternal(layoutResponse.Result);
     }
 }
